# nomyx-rules

./: .gitignore  nomyx-rules.cabal
src/: Bank.hs  Withdraw.hs
